--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -17,19 +17,30 @@ Javascript functions are being calculated in app.js/forecastController
 </div>
 
 
-<div ng-repeat="weather in weatherResult.list">
+<div ng-repeat="w in weatherResult.list">
     <div class="row">
         <div class="col-md-12">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">Date: {{ convertToDate(weather.dt) | date: "MMM. d, y" }}</h3> <!-- interpolation with filter -->
+                    <h3 class="panel-title">Date: {{ convertToDate(w.dt) | date: "MMM. d, y" }}</h3> <!-- interpolation with filter -->
                 </div>
                 <div class="panel-body">
-                    Daytime Temperature: {{ convertToFahrenheit(weather.temp.day) }}
+                    Daytime Temperature: {{ convertToFahrenheit(w.temp.day) }}
                     <br>
-                    Night Temperature: {{ convertToFahrenheit(weather.temp.night) }}
+                    Night Temperature: {{ convertToFahrenheit(w.temp.eve) }}
+                    <br>
+                    Weather: {{ w.weather }}
+                    <br>
+                    <div ng-repeat="wD in weatherResult.list.weather">
+                        WeatherY: {{ wD }}
+                    </div>
+                    <br>
+                    WeatherX: {{ w.dt }}
                 </div>
+                
             </div>
         </div>
     </div>
 </div>
+ 
+                    
