--- a/pages/forecast.html
+++ b/pages/forecast.html
@@ -32,7 +32,7 @@ Javascript functions are being calculated in app.js/forecastController
                     Day temp before conversion: {{ w.temp.day }} <br>
                     Weather: {{ w.weather }} <br>
                     Weather Pressure: {{ w.pressure }} <br>
-                    <!--Weather : {{ w.data.weather[0].main }} <br>-->
+                    Weather Main : {{ w.weather.main }} <br>
                     WeatherDay2: {{ dayWeather }}
                     <br>
                     <!--<div ng-repeat="wD in weatherResult.list.weather">
