--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!--<script src="lib/angular/angular.js"></script>
     <script src="lib/angular/angular-route.min.js"></script>-->
-    <script src="//code.angularjs.org/1.3.0-rc.2/angular.min.js"></script>
-    <script src="//code.angularjs.org/1.3.0-rc.2/angular-route.min.js"></script>
-    <script src="//code.angularjs.org/1.3.0-rc.2/angular-resource.min.js"></script>
+    <script src="https://code.angularjs.org/1.3.0-rc.2/angular.min.js"></script>
+    <script src="https://code.angularjs.org/1.3.0-rc.2/angular-route.min.js"></script>
+    <script src="https://code.angularjs.org/1.3.0-rc.2/angular-resource.min.js"></script>
     
     <script src="app.js"></script>
     
